# gitcg-sim-web

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: actions_list.rs  app.rs  components.rs  deck_editor.rs  main.rs  search.rs
