[package]
name = "gitcg_sim_web"
version = "0.1.0"
edition = "2021"
description = "Web-based Genius Invokation TCG simulator"
readme = "README.md"
repository = ""
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[profile.release]
panic = 'abort'
opt-level = 3
codegen-units = 1
lto = true

[[bin]]
name = "worker"
path = "src/main.rs"

# See more keys and their definitions at https:/tps/doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = { version = "0.2.0" }
instant = { version = "0.1", features = ["stdweb", "wasm-bindgen"] }
gitcg_sim = { version = "0.1.0", path = "../GITCGSim", features = ["wasm"] }
gitcg_sim_search = { version = "0.1.0", path = "../GITCGSim/gitcg_sim_search", features = ["wasm"] }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = { version = "*" }
js-sys = { version = "*" }
web-sys = { version = "0.3.61", features = ["HtmlSelectElement"] }
wasm-bindgen = { version = "*" }
gloo = { version = "*" }
gloo-storage = { version = "*" }
lazy_static = { version = "1.4.*" }
